# loki

./: .gitignore  BEHAVIOR.md  BUILD_GUIDE.md  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt
assets/: CREDITS.md
assets/skins/mike-white/: meta.toml
deskcats/: cat.py  config.py  gen_placeholder_art.py  main.py  physics.py  social.py  spots.py  sprites.py  state_machine.py
tests/: conftest.py  test_gen_placeholder_art.py  test_guards.py  test_install_script.py  test_interaction.py  test_physics.py  test_social.py  test_spots.py  test_state_machine.py
